# 2captcha-rust

./: Cargo.toml  README.md
examples/: basic.rs
src/: api.rs  error.rs  lib.rs  solver.rs  types.rs  utils.rs
